# Hamiltonian_Vision_Kernel

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  Summary_Main.md  Summary_Main2.md  cuda_check.py  hvk_methodology_outputs.tex  pyproject.toml  requirements-ci.txt  requirements.txt  sync_github.sh  todo.md
.claude/: settings.json
.github/workflows/: ci.yml  pages.yml
Baselines/: README.md  __init__.py  common.py  download_cifar10_subset.py  plot_cifar10_metric_comparison.py  plot_metric_comparison.py  plot_mps_bond_dim_scaling.py  run_cifar10_benchmark.py
Baselines/cifar10_benchmark/: README.md  common.py
Baselines/cifar10_comparisons/: README.md  common.py  download_cifar32.py  main.py  plot_all_architecture_cifar_benchmark.py  run_comprehensive_benchmark.py  smoke_test.py
Baselines/gan_reconstruction/: __init__.py  run_gan.py
Baselines/monalisa_comparisons/: README.md  main.py
Baselines/phl_segmentation/: __init__.py  run_phl.py
IBM_Cloud/: README.md  plot_hardware_patch_map.py  plot_reconstruction_error_vs_epoch.py  prepare_ibm_dataset.py  requirements-cross-cloud.txt  requirements-ibm.txt  run_cross_quantum_validation.py  run_hardware_latent_validation.py  run_hardware_robustness_real_anchors.py  run_hardware_robustness_simulator_sweep.py  run_hvk2d_cifar_hardware_reconstruction.py  run_hvk_hardware_reconstruction.py  run_ibm_epoch_probe.py  run_ibm_hvk_probe.py
IBM_Cloud/datasets/: monalisa_patches.npz
IBM_Cloud/outputs/: cross_quantum_validation_ibm.json  hardware_latent_validation.csv  hardware_latent_validation.json  ibm_epoch_probe_circuits.json
Main/: README.md  main.py
Main/Notebooks/: HVK.ipynb
Main/src/: README.md
Main2/: README.md  main.py
Main2/Scripts/: HVK2.0.ipynb  hvk_epoch_correlation_table.csv  hvk_epoch_reconstruction_table.csv
Main2/newHVK/: plot_training_reorganization.py  run_critical_temperature.py  run_d4_real_circuit_confirmation.py  run_d4_symmetry_experiment.py  run_full_dataset_sameset.py  run_phase_transition_multi_dataset.py  run_scaling_study.py  run_topology_comparison.py  run_topology_comparison_surrogate.py
Main2/src/: README.md  __init__.py  analysis.py  config.py  dataset.py  model.py  outputs.py  pathing.py  training.py
PROJECT_STUDY/: 1_structure.md  2_Main_how_it_works.md  3_python_library.md  4_experiments_todo.md
Scripts/: HVK.ipynb
docs/: README.md  index.html
experiments/: manuscript_skeleton.tex  report.md  report_2.md  todo.md
latex_outputs/: README.md  hvk_methodology_outputs.tex
latex_outputs/paper_latex/: MANUSCRIPT_SOURCES.md  literature_review.tex  paper_hvk.tex  supplementary_ibm_hardware.tex  supplementary_study.tex
latex_outputs/papers/: newhvk_paper.tex
main2/newHVK/: README.md  manifest.json  (+4 more)
outreach/: prepare_professor_emails.py  professor_outreach_template.md  professors_for_outreach.csv
presentation/: hvk_ablation_slides.tex  hvk_full_presentation.tex  newly_recruited_quantum_faculty_collaborators.csv  newly_recruited_quantum_faculty_collaborators.xlsx  qa_prep.md  speech.md
project_artifacts/: algorithm.md  manuscript_skeleton.tex  report.md  report_2.md  results.md  submission_claim_audit.json
python_library/: README.md  pyproject.toml
python_library/src/hvk/: README.md  __init__.py  api.py  config.py
python_library/src/hvk/config/: training_config.json
python_library/src/hvk/hvk2d/: __init__.py  model.py  order_parameters.py  training.py
python_library/src/hvk/preprocessing/: patching.py
python_library/src/hvk/quantum/: quantum_model.py  symmetric_model.py
python_library/src/hvk/tensornetworks/: mps_reconstruction.py
python_library/src/hvk/training/: data_generator.py  order_parameters.py  training.py
python_library/src/hvk/visualization/: training_curve.py
python_library/tests/: README.md  test_public_api.py  test_system_parameters.py
tests/: README.md  conftest.py  test_cifar_benchmark_helpers.py  test_decoder.py  test_preprocessing.py  test_submission_claim_audit.py  test_training_smoke.py
(+386 files in other folders)
