[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HVK"
version = "0.1.0"
description = "Hamiltonian Vision Kernel image reconstruction tools with standard and U(1)-symmetric HVK1D variants."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Hamiltonian Vision Kernel contributors"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "matplotlib",
  "numpy",
  "opencv-python",
  "pennylane",
  "quimb",
  "torch",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
hvk-run = "hvk.api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hvk = ["config/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
  "build",
  "dist",
  "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402"]
